added new route for pnml model mining
